--- a/views/logged.pug
+++ b/views/logged.pug
@@ -4,5 +4,5 @@ html
 		link(rel='stylesheet', href='/static/style.css')
 	body
 		div.container
-			h1 Congratulations :-), you have logged successfully!
+			h1 Congratulations #{user.displayName} :-), you have logged successfully!
 			img(src='https://i.imgur.com/Uwr7ZZr.jpg')
